# firecracker-rust-sdk

./: .openapi-generator-ignore  Cargo.toml  Makefile  README.md  firecracker.yaml  regenerate.sh
.github/workflows/: sync.yml
.openapi-generator/: FILES
_handcrafted/src/: machine.rs
docs/: ArmRegisterModifier.md  Balloon.md  BalloonHintingStatus.md  BalloonStartCmd.md  BalloonStats.md  CpuConfig.md  CpuidLeafModifier.md  CpuidRegisterModifier.md  DefaultApi.md  Drive.md  FullVmConfiguration.md  InstanceActionInfo.md  InstanceInfo.md  Logger.md  MachineConfiguration.md  MemoryBackend.md  MemoryHotplugConfig.md  MemoryHotplugSizeUpdate.md  MemoryHotplugStatus.md  MmdsConfig.md  MsrModifier.md  NetworkInterface.md  NetworkOverride.md  PartialPmem.md  Pmem.md  SerialDevice.md  SnapshotCreateParams.md  SnapshotLoadParams.md  VcpuFeatures.md  Vm.md  VsockOverride.md
examples/: README.md  connect.rs  fetch_test_images.sh  shutdown_vm.rs  simple_vm.rs  simple_vm_alpine.rs
src/: client.rs  error.rs  lib.rs  machine.rs
src/apis/: configuration.rs  default_api.rs
src/models/: arm_register_modifier.rs  balloon.rs  balloon_hinting_status.rs  balloon_start_cmd.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_config.rs  cpu_template.rs  cpuid_leaf_modifier.rs  cpuid_register_modifier.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine_configuration.rs  memory_backend.rs  memory_hotplug_config.rs  memory_hotplug_size_update.rs  mod.rs  (+19 more)
