[package]
name = "firecracker-rust-sdk"
version = "1.15.1"
authors = ["Benny Zlotnik"]
description = "Rust SDK for the Firecracker microVM REST API"
license = "Apache-2.0"
edition = "2024"

[lib]
name = "firecracker_rust_sdk"
path = "src/lib.rs"

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client", "http1"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }

[[example]]
name = "connect"
path = "examples/connect.rs"

[[example]]
name = "simple_vm"
path = "examples/simple_vm.rs"

[[example]]
name = "simple_vm_alpine"
path = "examples/simple_vm_alpine.rs"

[[example]]
name = "shutdown_vm"
path = "examples/shutdown_vm.rs"
